# yingzi-skill-manager

./: .gitignore  AGENTS.md  DESIGN.md  PRODUCT.md  README.md  index.html  package-lock.json  package.json  tsconfig.node.json  vite.config.ts
src/: App.tsx  (+4 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/resources/preset-skills/agent-browser/: SKILL.md
src-tauri/resources/preset-skills/brainstorming/: SKILL.md
src-tauri/resources/preset-skills/design-taste-skill-pack/: README.md  SKILL.md
src-tauri/resources/preset-skills/experiment-ux-guard/: SKILL.md
src-tauri/resources/preset-skills/find-skills/: SKILL.md
src-tauri/resources/preset-skills/lark-apps/: SKILL.md
src-tauri/resources/preset-skills/lark-base/: SKILL.md
src-tauri/resources/preset-skills/lark-doc/: SKILL.md
src-tauri/resources/preset-skills/lark-drive/: SKILL.md
src-tauri/resources/preset-skills/lark-markdown/: SKILL.md
src-tauri/resources/preset-skills/lark-shared/: SKILL.md
src-tauri/resources/preset-skills/lark-sheets/: SKILL.md
src-tauri/resources/preset-skills/lark-slides/: SKILL.md
src-tauri/resources/preset-skills/office-hours/: SKILL.md
src-tauri/resources/preset-skills/plan-ceo-review/: SKILL.md  manifest.json
src-tauri/resources/preset-skills/skill-creator/: SKILL.md
src-tauri/resources/preset-skills/storyline/: SKILL.md
src-tauri/resources/preset-skills/ug-num-strategy/: SKILL.md
src-tauri/resources/preset-skills/ug-prd-review-jc-style/: SKILL.md
src-tauri/src/: commands.rs  lib.rs  main.rs  models.rs  storage.rs
(+120 files in other folders)
